# ged_baselines

./: README.md  pyproject.toml  requirements.txt
ged_baselines/: __init__.py
ged_baselines/token_ged/: README.md  __init__.py  aggregate_results.py  evaluate.py  get_best.py  predict.py  push_to_hub.py  toy.py
token_ged/: evaluate.py  predict.py
